<resources>
    <string name="app_name">Pink Elephant</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_lastname">Lastname</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_register_short">Register</string>
    <string name="action_forgot_password">Forgotten Password</string>
    <string name="action_send_password">Send Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="error_invalid_lastname">This lastname is invalid</string>
    <string name="error_incorrect_email">This e-mail does not exist in our system</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_forgotten_password">Forgotten Password</string>
    <string name="title_activity_main">Main Page</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="type_your_message">Enter msg</string>
    <string name="NoRecent">No recent</string>
    <string name="title_activity_new_group">NewGroupActivity</string>
    <string name="title_activity_group">Placeholder</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
