<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="swe574.boun.edu.androidproject.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@drawable/background_login">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:orientation="vertical" android:layout_gravity="center" android:background="@drawable/background_form"
            android:paddingBottom="15dp" android:paddingTop="10dp" android:paddingRight="40dp" android:paddingLeft="40dp">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true" android:background="@drawable/edittextstyle" android:drawableLeft="@drawable/ic_icon_person" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="5dp">

                <EditText android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true" android:background="@drawable/edittextstyle"
                    android:drawableLeft="@drawable/ic_icon_lock"/>

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/forgot_password_button" android:background="@drawable/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_forgot_password"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button android:id="@+id/sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="16dp" android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/button_style"
                    android:textColor="@color/white"/>

                <Button android:id="@+id/register_button" style="?android:textAppearanceSmall"
                    android:layout_width="0dp" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/action_register"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:background="@drawable/button_style" android:textColor="@color/white"/>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/ic_login_page_logo"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_weight="2" />
    </LinearLayout>

</RelativeLayout>
